[package]
name = "useless"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"]}
indicatif = "0.18.4"
lexopt = "0.3.2"
notify = "8.2.0"
reqwest = { version = "0.13.4", features = ["blocking", "brotli", "deflate", "form", "gzip", "json", "query", "zstd"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
subst = "0.3.8"
toml = "1.1.2"
